Fix visible overflow image slide on mobile

--- a/assets/stylesheets/components/transition.css
+++ b/assets/stylesheets/components/transition.css
@@ -2,16 +2,13 @@
 .slide-enter-active,
 .slide-leave-active {
   transition: all 0.8s ease;
-  visibility: visible;
   position: absolute;
   border-radius: 0;
 }
 .slide-enter {
-  visibility: hidden;
   transform: translateX(150%);
 }
 
 .slide-leave-to {
-  visibility: hidden;
   transform: translateX(-150%);
 }
